--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_core: ^1.0.2
   cloud_firestore: ^1.0.2
   firebase_storage: ^8.0.0
+  image_picker: ^0.7.3
 
 dev_dependencies:
   flutter_test:
