--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   cloud_firestore: ^1.0.2
   firebase_storage: ^8.0.0
   image_picker: ^0.7.3
+  brasil_fields: 1.1.1
+  validadores: ^0.0.1
 
 dev_dependencies:
   flutter_test:
