--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   image_picker: ^0.7.3
   brasil_fields: 1.1.1
   validadores: ^0.0.1
+  carousel_pro: ^1.0.0
 
 dev_dependencies:
   flutter_test:
