--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   brasil_fields: 1.1.1
   validadores: ^0.0.1
   carousel_pro: ^1.0.0
+  url_launcher: ^6.0.3
 
 dev_dependencies:
   flutter_test:
